# PreCol

./: .buildinfo  .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  Makefile  genindex.html  index.html  main.cpp  readme.md  readme.txt  report.md  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
Algorithms/: ColAlg.h  ColoringAlgorithms.cpp  ColoringAlgorithms.h  GreedyColoringLimitedMaxColor.cpp  GreedyColoringLimitedMaxColor.h  GreedyColoringSimpleGraph.cpp  GreedyColoringSimpleGraph.h  GreedyColoringSimpleGraphBoost.cpp  GreedyColoringSimpleGraphBoost.h  ISet.hpp  ISetColeman.hpp  ISetRestricted.hpp  ISetVariant.hpp  ISetVariantRestricted.hpp  IndependentSet.h  JonesPlassmannColoring.cpp  JonesPlassmannColoring.h  MonteCarloHeuristicLuby.cpp  MonteCarloHeuristicLuby.h  OneSidedD2ColorNonReqDiag.h  OneSidedD2Coloring.h  OneSidedD2ColoringNonReq.h  OneSidedD2ColoringNonReqBalanced.h  SaturatedDegreeOrderingColoring.cpp  SaturatedDegreeOrderingColoring.h  StarBicoloringVertexCover.h  StarBicoloringVertexCoverNonReq.h  algorithms.h  d2_color_omp.h  exact_coloring.h  kClique.hpp
Algs/: ColAlg.h  ISet.hpp  ISetRestricted.hpp  ISetVariant.hpp  ISetVariantRestricted.hpp  OneSidedD2ColorNonReqDiag.h  OneSidedD2Coloring.h  OneSidedD2ColoringNonReq.h  OneSidedD2ColoringNonReqBalanced.h  StarBicoloringVertexCover.h  StarBicoloringVertexCoverNonReq.h  algs.h  d2_color.h  d2_color_diag.h  d2_color_nreq.h  d2_color_nreq_modified.h  greedy_coloring.cpp  greedy_coloring.h  star_bicoloring_vertex_cover.h  star_bicoloring_vertex_cover_nreq.h
Application/: HandleInput.cpp  HandleInput.h  HandleInputOutput.cpp  InputFile  handle_input.h
AutoDiff/: add.hpp  pot.hpp
BoostTest/: ApplicationTest.cpp  CMakeLists.txt  PreColTest.cpp
Documentation/: Doxyfile  conf.py
ExampleMatrices/: arrow-shaped_plus_one_minus_one.mtx  custom_required_pattern1  readme.md
Graph/: ConvertGraph.cpp  ConvertGraph.hpp  GraphDataType.hpp  GraphOutput.cpp  GraphOutput.hpp  MatrixMarket.cpp  MatrixMarket.hpp  Mtx2Graph.cpp  Mtx2Graph.hpp  Sparsify.cpp  Sparsify.h  datatypes.hpp  mmio.cpp  mmio.h  neighbors.cpp  neighbors.hpp  output_graph.hpp  sparsify.h
InputOutput/: HandleInputOutput.cpp  HandleInputOutput.h
Main/: Coloring.cpp  InputFile  InputTable.csv  InputTableFullTest.csv  PreCol.cpp
Orderings/: IDO.h  LFO.h  LargestFirstOrderingDegrees.h  NAT.h  NaturalOrdering.h  Ordering.h  SILU.h  SLO.h  WeightOptimumOrdering.h  orderings.h
OtherSources/: graph.h
algs/: ColAlg.cpp  ColAlg.h  ISet.cpp  ISet.hpp  ISetColeman.cpp  ISetColeman.hpp  ISetRestricted.cpp  ISetRestricted.hpp  ISetVariant.hpp  ISetVariantRestricted.cpp  ISetVariantRestricted.hpp  IndSet.h  algs.h  d2_color.cpp  d2_color.h  d2_color_nreq.h  d2_color_nreq_modified.h  d2_color_omp.cpp  d2_color_omp.hpp  isets.h  new_heuristic.h  new_heuristic_diag.h  star_bicoloring.cpp  star_bicoloring.h  (+6 more)
doc/: Doxyfile
(+194 files in other folders)
