cmake_minimum_required(VERSION 3.2.2)
project(precol)
find_package(Boost REQUIRED COMPONENTS unit_test_framework)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fopenmp -lmetis")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fopenmp  -D_GLIBCXX_PARALLEL")
include_directories(src/)
file(GLOB ALG_SRC "Algs/*.cpp")
file(GLOB AD_SRC "AutoDiff/*.cpp")
file(GLOB GRAPH_SRC "Graph/*.cpp")
file(GLOB ORD_SRC "Orderings/*.cpp")
file(GLOB BoostTestSrc "BoostTest/*.cpp")
#add_executable(precol ${SRC} ${ALG_SRC})
add_executable(BoostTest ${ALG_SRC} ${GRAPH_SRC} ${ORD_SRC} ${BoostTestSrc})
#target_link_libraries(precol ${Boost_LIBRARIES})
target_link_libraries(BoostTest ${Boost_LIBRARIES})