cmake_minimum_required(VERSION 3.2.2)
project(precol)
find_package(Boost REQUIRED COMPONENTS unit_test_framework)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fopenmp -lmetis")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fopenmp  -D_GLIBCXX_PARALLEL")
include_directories(${Boost_INCLUDE_DIRS})
file(GLOB ALG_SRC "Algs/*.cpp")
file(GLOB PRECONDITIONING_SRC "Application/Preconditioning/*.cpp")
file(GLOB GRAPH_SRC "Graph/*.cpp")
file(GLOB ORD_SRC "Orderings/*.cpp")
file(GLOB BoostTestSrc "BoostTest/*.cpp")
file(GLOB MainSRC "Main/*.cpp")
#add_executable(precol ${MainSRC} ${ALG_SRC})
add_executable(BoostTest ${BoostTestSrc} ${ALG_SRC} ${GRAPH_SRC} ${ORD_SRC})
#target_link_libraries(precol ${Boost_LIBRARIES})
target_link_libraries(BoostTest ${Boost_LIBRARIES})